# macro-bits

./: .gitignore  Cargo.toml  pyproject.toml
src/: layout_helper.rs  lib.rs  macro_bits.rs
src/macro_bits/: construction.rs
src/macro_bits/construction/: from_to_words.rs  ones.rs  zeros.rs
src/macro_bits/ops/bit_primitive/: binary_op.rs
