[package]
name = "macro-bits"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
description = "An experimental bit sequence library with bitwise operations and SIMD acceleration."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jcfangc/macro-bits"
readme = "README.md"
keywords = ["bitset", "bits", "bitwise", "simd", "bitmap"]
categories = ["data-structures", "algorithms"]

[dependencies]

[dev-dependencies]
proptest = "1.10.0"
